--- a/index.html
+++ b/index.html
@@ -14,8 +14,24 @@
         <li><a href="video.html">Video</a></li>
         <li><a href="audio.html">Music</a></li>
         <li><a href="book.html">Book</a></li>
+        <li class="work"><a href="#">Work &bigtriangledown;</a>
+            <ul>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="math.html">Math</a></li>
+                <li><a href="api.html">API</a></li>
+            </ul>
+        </li>
     </ul>
-    <div><a href="https://ku.edu.kz">Entry</a></div>
+
+    <div>
+        
+        <div class="burger" id="burger2">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <a href="https://ku.edu.kz">Entry</a>
+    </div>
    </nav>
    <main>
     <div class="container">
@@ -57,5 +73,6 @@
    <footer>
     <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/instagram.jpg" width=50 height=40></a>
    </footer>
+   <script src="./js/script.js"></script>
 </body>
 </html>
