--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <nav class="navbar">
-    <img src="./src/logo.JPG" width=60 height=60 alt="logo">
+    <img src="./src/pic/logo.JPG" width=50 height=50 alt="logo">
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="video.html">Video</a></li>
@@ -42,7 +42,7 @@
             <p>Place of birth: Rudny, Kazakhstan</p>
             <p>Profession: student</p>
         </div>
-        <img src="./src/pic1.png" width=600 height=400  alt="photo">
+        <img src="./src/pic/pic1.png" width=600 height=400  alt="photo">
         <div class="interests">
             <p>Interests: books and comicses, numeric sequencies, tasty food.</p>
             <p>Hobbies: reading.</p>
@@ -71,7 +71,7 @@
     </div>
    </main>
    <footer>
-    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/instagram.jpg" width=50 height=40></a>
+    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/pic/instagram.jpg" width=50 height=40></a>
    </footer>
    <script src="./js/script.js"></script>
 </body>
