--- a/book.html
+++ b/book.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <img src="./src/logo.JPG" width=60 height=60 alt="logo">
+        <img src="./src/pic/logo.JPG" width=50 height=50 alt="logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="video.html">Video</a></li>
@@ -34,24 +34,24 @@
    <main>
         <div class="container-book">
             <section class="book1">
-                <img src="./src/tu.jpeg" width=600 height=400>
-                <a href="./src/tpb.pdf">Download book</a>
+                <img src="./src/pic/tu.jpeg" width=600 height=400>
+                <a href="./src/book/tpb.pdf">Download book</a>
                 <p>This is a book for preapering to TOEFL exam. Students can research the structure of tasks
                     and how the answers have to de organized. Also, everyone can find useful vocabulary and
                     phrases that can be applied at the real exam.
                 </p>
             </section>
             <section class="book2">
-                <img src="./src/sb.jpeg" width=600 height=400>
-                <a href="./src/nesb.pdf">Download book</a>
+                <img src="./src/pic/sb.jpeg" width=600 height=400>
+                <a href="./src/book/nesb.pdf">Download book</a>
                 <p>It is a students book for intermediate level of English. You can practice all 4 skills:
                     listening, writing, reading, and speaking. Likewise, in the end of this book you can 
                     find gramma sections, vocabulary bank, and list of irregular verbs.
                 </p>
             </section>
             <section class="book3">
-                <img src="./src/wb.jpeg" width=600 height=400>
-                <a href="./src/newb.pdf">Download book</a>
+                <img src="./src/pic/wb.jpeg" width=600 height=400>
+                <a href="./src/book/newb.pdf">Download book</a>
                 <p>This is an additional book for self education or home works. Here sstudents practice all 
                     knowledge and skills that they recieved on lections.
                 </p>
@@ -59,7 +59,7 @@
         </div>
    </main>
    <footer>
-    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/instagram.jpg" width=50 height=40></a>
+    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/pic/instagram.jpg" width=50 height=40></a>
    </footer>
    <script src="./js/script.js"></script>
 </body>
