--- a/audio.html
+++ b/audio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <img src="./src/logo.JPG" width=60 height=60 alt="logo">
+        <img src="./src/pic/logo.JPG" width=50 height=50 alt="logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="video.html">Video</a></li>
@@ -34,21 +34,21 @@
    <main>
         <div class="container-audio">
             <section class="audio1">
-                <img src="./src/dr.jpeg" height=200>
-                <audio src="./src/dream.mp3" controls type = "audio/mp3"></audio>
+                <img src="./src/pic/dr.jpeg" height=200>
+                <audio src="./src/music/dream.mp3" controls type = "audio/mp3"></audio>
             </section>
             <section class="audio2">
-                <img src="./src/kl.jpeg" height=200>
-                <audio src="./src/kl.mp3" controls type = "audio/mp3"></audio>
+                <img src="./src/pic/kl.jpeg" height=200>
+                <audio src="./src/music/kl.mp3" controls type = "audio/mp3"></audio>
             </section>
             <section class="audio3">
-                <img src="./src/ved.jpeg" height=200>
-                <audio src="./src/ved.mp3" controls type = "audio/mp3"></audio>
+                <img src="./src/pic/ved.jpeg" height=200>
+                <audio src="./src/music/ved.mp3" controls type = "audio/mp3"></audio>
             </section>
         </div>
    </main>
    <footer>
-    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/instagram.jpg" width=50 height=40></a>
+    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/pic/instagram.jpg" width=50 height=40></a>
    </footer>
    <script src="./js/script.js"></script>
 </body>
