--- a/api.html
+++ b/api.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <nav class="navbar">
-    <img src="./src/logo.JPG" width=60 height=60 alt="logo">
+    <img src="./src/pic/logo.JPG" width=50 height=50 alt="logo">
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="video.html">Video</a></li>
@@ -37,7 +37,7 @@
    
    </main>
    <footer>
-    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/instagram.jpg" width=50 height=40></a>
+    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/pic/instagram.jpg" width=50 height=40></a>
    </footer>
    <script src="./js/script.js"></script>
 </body>
