--- a/video.html
+++ b/video.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <img src="./src/logo.JPG" width=60 height=60 alt="logo">
+        <img src="./src/pic/logo.JPG" width=50 height=50 alt="logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="video.html">Video</a></li>
@@ -34,7 +34,7 @@
    <main>
         <div class="container-video">
             <section class="video1">
-                <video src="./src/video1.mp4" controls width= 600 height=400></video>
+                <video src="./src/video/video1.mp4" controls width= 600 height=400></video>
                 <p>
                     This is a video instruction for my web-site that I had made in 11 like an part of assignment 
                     by computer science final assesment. Here I told about main functions that are accessable 
@@ -64,7 +64,7 @@
         </div>
    </main>
    <footer>
-    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/instagram.jpg" width=50 height=40></a>
+    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/pic/instagram.jpg" width=50 height=40></a>
    </footer>
    <script src="./js/script.js"></script>
 </body>
