--- a/math.html
+++ b/math.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles.css">
-    <title>Home</title>
+    <title>Math</title>
 </head>
 <body>
    <nav class="navbar">
-    <img src="./src/logo.JPG" width=60 height=60 alt="logo">
+    <img src="./src/pic/logo.JPG" width=50 height=50 alt="logo">
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="video.html">Video</a></li>
@@ -33,11 +33,52 @@
         <a href="https://ku.edu.kz">Entry</a>
     </div>
    </nav>
-   <main>
-   
+   <main class = "math">
+        <form>
+            <fieldset>
+                <legend>Calculation</legend>
+                <div class="counters">
+                    <div>
+                        <label for="first">First<br>number</label>
+                        <input type="number" id="first" name="first" placeholder="0">
+                    </div>
+                    <div>
+                        <label for="second">Second<br>number</label>
+                        <input type="number" id="second" name="second" placeholder="0">
+                    </div>
+                </div>
+                <div class="butcont">
+                    <button id="butplus">+</button>
+                    <button id="butminus">-</button>
+                    <button id="butmult">*</button>
+                    <button id="butdiv">/</button>
+                </div>
+                <p><span id="result">0</span></p>
+            </fieldset>
+        </form>
+        <form>
+            <fieldset>
+                <div class="counters">
+                    <div>
+                        <label for="first">Variable</label>
+                        <input type="number" id="vari" name="vari" placeholder="0">
+                    </div>
+                    <div>
+                        <label for="second">Value</label>
+                        <p><span id="result2">0</span></p>
+                    </div>
+                </div>
+                <div class="butcont">
+                    <button id="butcos">cos()</button>
+                    <button id="butsin">sin()</button>
+                    <button id="buttan">tan()</button>
+                    <button id="butcot">cot()</button>
+                </div>
+            </fieldset>
+        </form>
    </main>
    <footer>
-    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/instagram.jpg" width=50 height=40></a>
+    <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/pic/instagram.jpg" width=50 height=40></a>
    </footer>
    <script src="./js/script.js"></script>
 </body>
