--- a/api.html
+++ b/api.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles.css">
-    <title>Home</title>
+    <title>API</title>
 </head>
 <body>
    <nav class="navbar">
@@ -33,12 +33,36 @@
         <a href="https://ku.edu.kz">Entry</a>
     </div>
    </nav>
-   <main>
-   
+   <main class="API">
+        <section class="Kost">
+            <img src="src/pic/kost.jpg">
+            <div>
+                <h2>Kostanay</h2>
+                <span id="Kost_t">Air temperature: </span>
+                <span id="Kost_s">Wind speed: </span>
+            </div>
+        </section>
+        <section class="Kem">
+            <img src="src/pic/kem.jpg">
+            <div>
+                <h2>Kemerovo</h2>
+                <span id="Kem_t">Air temperature: </span>
+                <span id="Kem_s">Wind speed: </span>
+            </div>
+        </section>
+        <section class="Deb">
+            <img src="src/pic/deb.jpg"> 
+            <div>
+                <h2>Debrecen</h2>
+                <span id="Deb_t">Air temperature: </span>
+                <span id="Deb_s">Wind speed: </span>
+            </div>
+        </section>
    </main>
    <footer>
     <a href="https://www.instagram.com/kitsu_lao?igsh=MTB1MWJsZGg0anR4Mw==" target="_blank"><img src="./src/pic/instagram.jpg" width=50 height=40></a>
    </footer>
    <script src="./js/script.js"></script>
+   <script src="./js/api.js"></script>
 </body>
 </html>
