--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles.css">
-    <title>Home</title>
+    <title>Form</title>
 </head>
 <body>
    <nav class="navbar">
@@ -19,6 +19,7 @@
                 <li><a href="form.html">Form</a></li>
                 <li><a href="math.html">Math</a></li>
                 <li><a href="api.html">API</a></li>
+                <li><a href="science.html">Science</a></li>
             </ul>
         </li>
     </ul>
