--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="form.html">Form</a></li>
                 <li><a href="math.html">Math</a></li>
                 <li><a href="api.html">API</a></li>
+                <li><a href="science.html">Science</a></li>
             </ul>
         </li>
     </ul>
